keycloak/postgresql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresdb
  labels:
    app: postgresdb
spec:
  serviceName: postgresdb
  replicas: 1
  selector:
    matchLabels:
      app: postgresdb
  template:
    metadata:
      labels:
        app: postgresdb
    spec:
      containers:
      - name: postgresdb
        image:  postgres:15
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "500Mi"
            cpu: "400m"
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgresql-storage
          mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
  - metadata:
      name: postgresql-storage
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: standard
      resources:
        requests:
          storage: 1Gi
