keycloak/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: asp
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
         more_set_headers "Access-Control-Allow-Origin: $http_origin";
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, DELETE, PATCH
    kubernetes.io/ingress.class: contour
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - host: keycloak.asp.et
      http:
        paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: keycloak
                  port:
                    number: 8080
  tls:
    - hosts:
      - keycloak.asp.et
